implemented generation of main dex classes list for multi dex
Change-Id: I32d76d8cc08d159f791e98ad75c780ca340ea0fb